.kube/redis/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-config-volume
              mountPath: /usr/local/etc/redis/
      volumes:
        - name: redis-config-volume
          configMap:
            name: redis-config
            items:
              - key: redis.conf
                path: redis.conf
